fix the too much outer halo

--- a/src/css/back.module.scss
+++ b/src/css/back.module.scss
@@ -12,7 +12,7 @@
     background-color: white;
     border-radius: 100px;
     padding: .7rem 1rem;
-    box-shadow:-2px 6px 37px -5px grey;
+    box-shadow:-3px 4px 100px -11px grey;
   
     .arrow_prop{
       margin: 0 .3rem;
